--- a/website/cdmemories.html
+++ b/website/cdmemories.html
@@ -21,7 +21,9 @@
     </div>
     <!-- buttons -->
 <br>
-<a href="file:///Users/charlotteelwell/Desktop/cdnostalgia.github.io/website/cdmemories.html">your memories</a>  
+<a href="file:///Users/charlotteelwell/Desktop/cdnostalgia.github.io/website/cdmemories.html">time, place and</a>
+<br>
+<a href="file:///Users/charlotteelwell/Desktop/cdnostalgia.github.io/website/cdmemories.html">physical trace</a> 
 <br>
 <br>
 <br>
@@ -45,7 +47,6 @@
 
   <div class="item small zero">
     <img src="assets/images/image3.png">
-    <br>
     <br>
     Microsoft Windows Server, 
      <br>2000
